Add initial implementation for osu!mania noodle conversion
This commit introduces the `rosu-noodlers` library, which provides functionality for converting osu!mania beatmaps between hold notes and standard notes. Includes core modules (`noln.rs`, `ln.rs`), tests, example `.osu` test files, and initial project setup with dependencies, `.gitignore`, and `Cargo.toml`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rosu-noodlers"
 version = "0.1.0"
 edition = "2021"
 authors = ["Osef0760 <osefcode@gmail.com>"]
-description = "Noodle detector for osu!mania"
+description = "Noodle changer for osu!mania"
 license = "MIT"
 repository = "https://github.com/OsuChecker/rosu-noodlers"
 documentation = "https://docs.rs/rosu-noodlers"
